--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
 
 /* Your CSS Code here. */
+.accio#job{
+	width:150px;
+	height:150px;
+	background-color:black;
+}
+.hello-accio{
+	text-color:white;
+	margin-left:32px;
+	padding:10px;
+}
+	
+}
